# restfful-fastapi-postgres-sqlalchemy

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: crud.py  main.py  schemas.py
app/api/: users.py
github/workflows/: ci.yml
tests/: users.py
