[tool.poetry]
name = "restfful-fastapi-postgres-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Ittichai Boonyarakthunya <i.boonyarakthunya@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.9"
pydantic = "^1.10.7"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

